<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_eula">"THIS SOFTWARE IS PROVIDED BY THE AUTHOR ''AS IS'' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE."</string>
    <string name="app_first">Great care has been taken to develop and test NetGuard, however it is impossible to guarantee NetGuard will work correctly on every device.</string>
    <string name="app_name">NetGuard</string>
    <string name="app_privacy"><a href="https://www.netguard.me/privacy/">Privacy policy</a></string>
    <string name="menu_about">About</string>
    <string name="menu_app_disabled">Show disabled apps</string>
    <string name="menu_app_nointernet">Show apps without internet</string>
    <string name="menu_app_system">Show system apps</string>
    <string name="menu_app_user">Show user apps</string>
    <string name="menu_apps">Other apps</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_filter">Filter apps</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_live">Live updates</string>
    <string name="menu_log">Show log</string>
    <string name="menu_organization">Show organization</string>
    <string name="menu_pcap_enabled">PCAP enabled</string>
    <string name="menu_pcap_export">PCAP export</string>
    <string name="menu_protocol_other">Other</string>
    <string name="menu_protocol_tcp">TCP</string>
    <string name="menu_protocol_udp">UDP</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_resolve">Show names</string>
    <string name="menu_search">Search for app</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_uid">Sort by uid</string>
    <string name="menu_support">Support</string>
    <string name="menu_traffic_allowed">Allowed</string>
    <string name="menu_traffic_blocked">Blocked</string>
    <string name="setting_access">Notify on internet access</string>
    <string name="setting_advanced_options">Advanced options</string>
    <string name="setting_backup">Backup</string>
    <string name="setting_block_domains">Block domain names</string>
    <string name="setting_call">Disable on call</string>
    <string name="setting_dark">Use dark theme</string>
    <string name="setting_defaults">Defaults (white/blacklist)</string>
    <string name="setting_eu_roaming">Ignore EU roaming</string>
    <string name="setting_export">Export settings</string>
    <string name="setting_filter">Filter traffic</string>
    <string name="setting_filter_udp">Filter UDP traffic</string>
    <string name="setting_forwarding">Port forwarding</string>
    <string name="setting_handover">Seamless VPN handover on reload</string>
    <string name="setting_hosts">Import hosts file</string>
    <string name="setting_hosts_append">Import hosts file (append)</string>
    <string name="setting_hosts_download">Download hosts file</string>
    <string name="setting_hosts_url">Hosts file download URL</string>
    <string name="setting_import">Import settings</string>
    <string name="setting_install">Notify on new install</string>
    <string name="setting_ip6">Enable IPv6 traffic</string>
    <string name="setting_lan">Allow LAN access</string>
    <string name="setting_lockdown">Lockdown traffic</string>
    <string name="setting_lockdown_other">Lockdown mobile</string>
    <string name="setting_lockdown_wifi">Lockdown Wi-Fi</string>
    <string name="setting_log_app">Log internet access</string>
    <string name="setting_malware">Malware protection</string>
    <string name="setting_metered">Handle metered Wi-Fi networks</string>
    <string name="setting_metered_2g">Consider 2G unmetered</string>
    <string name="setting_metered_3g">Consider 3G unmetered</string>
    <string name="setting_metered_4g">Consider LTE unmetered</string>
    <string name="setting_national_roaming">Ignore national roaming</string>
    <string name="setting_network_options">Network options</string>
    <string name="setting_options">Options</string>
    <string name="setting_reload_onconnectivity">Reload on every connectivity change</string>
    <string name="setting_reset_usage">Reset network usage</string>
    <string name="setting_screen_on">"Apply 'when screen on' rules"</string>
    <string name="setting_screen_other">Allow mobile when screen on</string>
    <string name="setting_screen_wifi">Allow Wi-Fi when screen on</string>
    <string name="setting_show_resolved">Show resolved domain names</string>
    <string name="setting_socks5_enabled">Use SOCKS5 proxy</string>
    <string name="setting_stats">Show speed notification</string>
    <string name="setting_stats_category">Speed notification</string>
    <string name="setting_stats_top">Show top apps</string>
    <string name="setting_subnet">Subnet routing</string>
    <string name="setting_system">Manage system apps</string>
    <string name="setting_technical">Technical information</string>
    <string name="setting_technical_general">General</string>
    <string name="setting_technical_networks">Networks</string>
    <string name="setting_tethering">Allow tethering</string>
    <string name="setting_track_usage">Track network usage</string>
    <string name="setting_update">Check for updates</string>
    <string name="setting_whitelist_other">Block mobile</string>
    <string name="setting_whitelist_roaming">Block roaming</string>
    <string name="setting_whitelist_wifi">Block Wi-Fi</string>
    <string name="summary_access">Show a status bar notification when an app attempts to access a new internet address (when filtering is disabled, only blocked internet access attempts will be notified)</string>
    <string name="summary_auto">After disabling using the widget, automatically enable NetGuard again after the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_block_domains">Respond with the configured DNS response code for blocked domain names. This switch is disabled when no hosts file is available.</string>
    <string name="summary_call">Disable NetGuard on incoming or outgoing telephone call. This can be used to work around IP/Wi-Fi calling problems.</string>
    <string name="summary_delay">After turning the screen off, keep screen on rules active for the selected number of minutes (enter zero to disable this option)</string>
    <string name="summary_eu_roaming">Do not apply roaming rules when the SIM and mobile network country are within the EU (roam like at home)</string>
    <string name="summary_filter">Filter IP packets going out of the VPN tunnel. This might result in extra battery usage.</string>
    <string name="summary_install">Show status bar notification to directly configure newly installed apps (pro feature)</string>
    <string name="summary_ip6">Route IP version 6 traffic to NetGuard so it can selectively be allowed or blocked</string>
    <string name="summary_lan">Allow apps to connect to local area network addresses, like 10.0.0.0/8, 172.16.0.0/12 and 192.168.0.0/16</string>
    <string name="summary_log_app">Log attempts to access the internet for apps. This might result in extra battery usage.</string>
    <string name="summary_metered">Apply mobile network rules to metered (paid, tethered) Wi-Fi networks</string>
    <string name="summary_metered_2g">Apply Wi-Fi network rules for 2G data connections</string>
    <string name="summary_metered_3g">Apply Wi-Fi network rules for 3G data connections</string>
    <string name="summary_metered_4g">Apply Wi-Fi network rules for LTE data connections</string>
    <string name="summary_national_roaming">Do not apply roaming rules when the SIM and mobile network country are the same</string>
    <string name="summary_rcode">"The default value is 3 (NXDOMAIN), which means 'non-existent domain'."</string>
    <string name="summary_socks5_enabled">Only TCP traffic will be sent to the proxy server</string>
    <string name="summary_stats">Show network speed graph in status bar notification</string>
    <string name="summary_subnet">Enable subnet routing; might enable Wi-Fi calling, but might also trigger bugs in Android and increase battery usage</string>
    <string name="summary_system">Define rules for system apps (for experts)</string>
    <string name="summary_tethering">Depending on the Android version, tethering may work or may not work. Tethered traffic cannot be filtered.</string>
    <string name="summary_track_usage">Track the number of bytes sent and received for each app and address. This might result in extra battery usage.</string>
    <string name="summary_update">Check for new releases on GitHub twice daily</string>
    <string name="summary_validate">Domain name used to validate the internet connection at port 443 (https).</string>
    <string name="summary_watchdog">Periodically check if NetGuard is still running (enter zero to disable this option). This might result in extra battery usage.</string>
    <string name="summary_wifi_home">Apply Wi-Fi network rules for selected network only (apply mobile network rules for other Wi-Fi networks)</string>
    <string name="title_dport">Source port</string>
    <string name="title_external">"For an external server select 'nobody'"</string>
    <string name="title_pro">Pro features</string>
    <string name="title_protocol">Protocol</string>
    <string name="title_raddr">Destination address</string>
    <string name="title_rport">Destination port</string>
    <string name="title_ruid">Destination app</string>
</resources>