<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="@string/setting_defaults" android:key="screen_defaults">
        <PreferenceCategory android:title="@string/setting_defaults" android:key="category_defaults">
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_whitelist_wifi" android:key="whitelist_wifi" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_whitelist_other" android:key="whitelist_other" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_screen_on" android:key="screen_on" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_screen_wifi" android:key="screen_wifi" android:dependency="screen_on" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_screen_other" android:key="screen_other" android:dependency="screen_on" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_whitelist_roaming" android:key="whitelist_roaming" android:defaultValue="true" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_options" android:key="screen_options">
        <PreferenceCategory android:title="@string/setting_options" android:key="category_options">
            <ListPreference android:entries="@array/themeNames" android:key="theme" android:defaultValue="teal" android:entryValues="@array/themeValues" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_dark" android:key="dark_theme" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_install" android:key="install" android:summary="@string/summary_install" android:defaultValue="true" />
            <EditTextPreference android:key="auto_enable" android:summary="@string/summary_auto" android:defaultValue="0" android:inputType="number" />
            <EditTextPreference android:key="screen_delay" android:summary="@string/summary_delay" android:defaultValue="0" android:inputType="number" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_update" android:key="update_check" android:summary="@string/summary_update" android:defaultValue="true" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_network_options" android:key="screen_network_options">
        <PreferenceCategory android:title="@string/setting_network_options" android:key="category_network_options">
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_subnet" android:key="subnet" android:summary="@string/summary_subnet" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_tethering" android:key="tethering" android:summary="@string/summary_tethering" android:dependency="subnet" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_lan" android:key="lan" android:summary="@string/summary_lan" android:dependency="subnet" android:defaultValue="false" />
            <MultiSelectListPreference android:key="wifi_homes" android:summary="@string/summary_wifi_home" android:defaultValue="@array/default_wifi_home" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_metered" android:key="use_metered" android:summary="@string/summary_metered" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_metered_2g" android:key="unmetered_2g" android:summary="@string/summary_metered_2g" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_metered_3g" android:key="unmetered_3g" android:summary="@string/summary_metered_3g" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_metered_4g" android:key="unmetered_4g" android:summary="@string/summary_metered_4g" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_national_roaming" android:key="national_roaming" android:summary="@string/summary_national_roaming" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_eu_roaming" android:key="eu_roaming" android:summary="@string/summary_eu_roaming" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_call" android:key="disable_on_call" android:summary="@string/summary_call" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_lockdown_wifi" android:key="lockdown_wifi" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_lockdown_other" android:key="lockdown_other" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_reload_onconnectivity" android:key="reload_onconnectivity" android:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_advanced_options" android:key="screen_advanced_options">
        <PreferenceCategory android:title="@string/setting_advanced_options" android:key="category_advanced_options">
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_system" android:key="manage_system" android:summary="@string/summary_system" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_log_app" android:key="log_app" android:summary="@string/summary_log_app" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_access" android:key="notify_access" android:summary="@string/summary_access" android:dependency="log_app" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_filter" android:key="filter" android:summary="@string/summary_filter" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_filter_udp" android:key="filter_udp" android:dependency="filter" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_handover" android:key="handover" android:dependency="filter" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_track_usage" android:key="track_usage" android:summary="@string/summary_track_usage" android:dependency="filter" android:defaultValue="false" />
            <Preference android:title="@string/setting_reset_usage" android:key="reset_usage" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_block_domains" android:key="use_hosts" android:summary="@string/summary_block_domains" android:dependency="filter" android:defaultValue="true" />
            <EditTextPreference android:key="rcode" android:summary="@string/summary_rcode" android:dependency="filter" android:inputType="number" />
            <Preference android:title="@string/setting_forwarding" android:key="forwarding" android:dependency="filter" />
            <EditTextPreference android:hint="10.1.10.1" android:key="vpn4" android:inputType="phone" inputType="phone" />
            <EditTextPreference android:hint="fd00:1:fd00:1:fd00:1:fd00:1" android:key="vpn6" android:inputType="text" />
            <EditTextPreference android:key="dns" android:dependency="filter" android:inputType="text" />
            <EditTextPreference android:key="dns2" android:dependency="filter" android:inputType="text" />
            <EditTextPreference android:hint="www.google.com" android:key="validate" android:summary="@string/summary_validate" android:inputType="text" />
            <EditTextPreference android:key="ttl" android:dependency="filter" android:inputType="number" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_socks5_enabled" android:key="socks5_enabled" android:summary="@string/summary_socks5_enabled" android:dependency="filter" android:defaultValue="false" />
            <EditTextPreference android:hint="127.0.0.1" android:key="socks5_addr" android:dependency="filter" android:inputType="text" />
            <EditTextPreference android:hint="1080" android:key="socks5_port" android:dependency="filter" android:inputType="number" />
            <EditTextPreference android:key="socks5_username" android:dependency="filter" android:inputType="text" />
            <EditTextPreference android:key="socks5_password" android:dependency="filter" android:inputType="textPassword" />
            <EditTextPreference android:key="pcap_record_size" android:defaultValue="64" android:inputType="number" />
            <EditTextPreference android:key="pcap_file_size" android:defaultValue="2" android:inputType="number" />
            <EditTextPreference android:key="watchdog" android:summary="@string/summary_watchdog" android:defaultValue="0" android:inputType="number" />
            <Preference android:title="@string/setting_show_resolved" android:key="show_resolved" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_stats_category" android:key="screen_stats">
        <PreferenceCategory android:title="@string/setting_stats_category" android:key="category_stats">
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_stats" android:key="show_stats" android:summary="@string/summary_stats" android:defaultValue="false" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_stats_top" android:key="show_top" android:dependency="show_stats" android:defaultValue="false" />
            <EditTextPreference android:key="stats_frequency" android:dependency="show_stats" android:defaultValue="1000" android:inputType="number" />
            <EditTextPreference android:key="stats_samples" android:dependency="show_stats" android:defaultValue="90" android:inputType="number" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_backup" android:key="screen_backup">
        <PreferenceCategory android:title="@string/setting_backup" android:key="category_backup">
            <Preference android:title="@string/setting_export" android:key="export" />
            <Preference android:title="@string/setting_import" android:key="import" />
            <Preference android:title="@string/setting_hosts" android:key="hosts_import" />
            <Preference android:title="@string/setting_hosts_append" android:key="hosts_import_append" />
            <EditTextPreference android:hint="https://www.netguard.me/hosts" android:title="@string/setting_hosts_url" android:key="hosts_url" android:defaultValue="https://www.netguard.me/hosts" />
            <Preference android:title="@string/setting_hosts_download" android:key="hosts_download" android:dependency="hosts_url" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="Development" android:key="screen_development">
        <PreferenceCategory android:title="Development" android:key="category_development">
            <ListPreference android:entries="@array/logLevelNames" android:title="Native log level" android:key="loglevel" android:summary="Log level verbose, debug and info will impact performance and battery usage" android:defaultValue="6" android:entryValues="@array/logLevelValues" />
            <eu.faircode.netguard.SwitchPreference android:title="@string/setting_ip6" android:key="ip6" android:summary="@string/summary_ip6" android:defaultValue="true" />
            <eu.faircode.netguard.SwitchPreference android:title="Debug IAB" android:key="debug_iab" android:defaultValue="false" />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/setting_technical" android:key="screen_technical">
        <PreferenceCategory android:title="@string/setting_technical" android:key="category_technical">
            <Preference android:title="@string/setting_technical_general" android:key="technical_info" />
            <Preference android:title="@string/setting_technical_networks" android:key="technical_network" />
        </PreferenceCategory>
    </PreferenceScreen>
</PreferenceScreen>