<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_white_24dp" android:id="@id/menu_search" android:title="@string/menu_search" netguard:actionViewClass="androidx.appcompat.widget.SearchView" netguard:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_filter_list_white_24dp" android:id="@id/menu_filter" android:title="@string/menu_filter" netguard:showAsAction="always|collapseActionView">
        <menu>
            <item android:id="@id/menu_app_user" android:title="@string/menu_app_user" android:checkable="true" />
            <item android:id="@id/menu_app_system" android:title="@string/menu_app_system" android:checkable="true" />
            <item android:id="@id/menu_app_nointernet" android:title="@string/menu_app_nointernet" android:checkable="true" />
            <item android:id="@id/menu_app_disabled" android:title="@string/menu_app_disabled" android:checkable="true" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_sort_white_24dp" android:id="@id/menu_sort" android:title="@string/menu_sort" netguard:showAsAction="always|collapseActionView">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@id/menu_sort_name" android:title="@string/menu_sort_name" />
                <item android:id="@id/menu_sort_uid" android:title="@string/menu_sort_uid" />
            </group>
        </menu>
    </item>
    <item android:id="@id/menu_lockdown" android:title="@string/setting_lockdown" android:checkable="true" />
    <item android:id="@id/menu_malware" android:title="@string/setting_malware" android:checkable="true" />
    <item android:id="@id/menu_log" android:title="@string/menu_log" />
    <item android:id="@id/menu_settings" android:title="@string/menu_settings" />
    <item android:id="@id/menu_pro" android:title="@string/title_pro" />
    <item android:id="@id/menu_invite" android:title="@string/menu_invite" />
    <item android:id="@id/menu_legend" android:title="@string/menu_legend" />
    <item android:id="@id/menu_support" android:title="@string/menu_support" />
    <item android:id="@id/menu_about" android:title="@string/menu_about" />
    <item android:id="@id/menu_apps" android:title="@string/menu_apps" />
</menu>