<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_white_24dp" android:id="@id/menu_search" android:title="@string/menu_search" netguard:actionViewClass="androidx.appcompat.widget.SearchView" netguard:showAsAction="always|collapseActionView" />
    <item android:icon="@drawable/ic_filter_list_white_24dp" android:id="@id/menu_filter" android:title="@string/menu_filter" netguard:showAsAction="always|collapseActionView">
        <menu>
            <item android:id="@id/menu_protocol_udp" android:title="@string/menu_protocol_udp" android:checkable="true" />
            <item android:id="@id/menu_protocol_tcp" android:title="@string/menu_protocol_tcp" android:checkable="true" />
            <item android:id="@id/menu_protocol_other" android:title="@string/menu_protocol_other" android:checkable="true" />
            <item android:id="@id/menu_traffic_allowed" android:title="@string/menu_traffic_allowed" android:checkable="true" />
            <item android:id="@id/menu_traffic_blocked" android:title="@string/menu_traffic_blocked" android:checkable="true" />
        </menu>
    </item>
    <item android:id="@id/menu_log_live" android:checked="true" android:title="@string/menu_live" android:checkable="true" />
    <item android:enabled="false" android:id="@id/menu_refresh" android:title="@string/menu_refresh" />
    <item android:id="@id/menu_log_resolve" android:checked="false" android:title="@string/menu_resolve" android:checkable="true" />
    <item android:id="@id/menu_log_organization" android:checked="false" android:title="@string/menu_organization" android:checkable="true" />
    <item android:id="@id/menu_pcap_enabled" android:title="@string/menu_pcap_enabled" android:checkable="true" />
    <item android:id="@id/menu_pcap_export" android:title="@string/menu_pcap_export" />
    <item android:id="@id/menu_log_clear" android:title="@string/menu_clear" />
    <item android:id="@id/menu_log_support" android:title="@string/menu_support" />
</menu>