<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_security_color_24dp" />
        <TextView android:textAppearance="@style/TextLarge" android:textStyle="bold" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/app_name" android:layout_marginStart="8.0dip" />
    </LinearLayout>
    <TextView android:textAppearance="@style/TextTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/setting_forwarding" />
    <ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_protocol" />
            <Spinner android:textAppearance="@style/TextMedium" android:entries="@array/protocolNames" android:id="@id/spProtocol" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:prompt="@string/title_protocol" />
            <TextView android:textAppearance="@style/TextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_dport" />
            <EditText android:textAppearance="@style/TextMedium" android:id="@id/etDPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="53" android:inputType="number" />
            <TextView android:textAppearance="@style/TextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_raddr" />
            <EditText android:textAppearance="@style/TextMedium" android:id="@id/etRAddr" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="127.0.0.1" android:inputType="text" />
            <TextView android:textAppearance="@style/TextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_rport" />
            <EditText android:textAppearance="@style/TextMedium" android:id="@id/etRPort" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="5353" android:inputType="number" />
            <TextView android:textAppearance="@style/TextSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_ruid" />
            <ProgressBar android:id="@id/pbRUid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" style="@android:style/Widget.ProgressBar.Small" />
            <Spinner android:textAppearance="@style/TextMedium" android:id="@id/spRUid" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:prompt="@string/title_ruid" />
            <TextView android:textAppearance="@style/TextSmall" android:textStyle="italic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_external" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>