<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_security_color_24dp" />
            <TextView android:textAppearance="@style/TextLarge" android:textStyle="bold" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/app_name" android:layout_marginStart="8.0dip" />
        </LinearLayout>
        <TextView android:textAppearance="@style/TextMedium" android:id="@id/tvFirst" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/app_first" />
        <TextView android:textAppearance="@style/TextSmall" android:id="@id/tvEula" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/app_eula" />
        <TextView android:textAppearance="@style/TextMedium" android:id="@id/tvPrivacy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/app_privacy" />
    </LinearLayout>
</ScrollView>